# ashe-depir

./: .gitignore  Cargo.toml  Readme.md  poly-batch-eval.sln
poly-batch-eval/: f32x2.h  kernel.cu  poly-batch-eval.vcxproj  primes.cpp  primes.h  zn.h
src/: ashe.rs  main.rs  strategy.rs
src/eval/: l2_zp2.rs  mod.rs
src/polynomial/: interpolate.rs  io.rs  mod.rs  splitting.rs
src/zn_eval/: async_read.rs  crt_evaluator.rs  mod.rs  prime_components.rs  read_disk.rs  read_ram.rs  zp2_evaluator.rs
