[package]
name = "fast-poly-pir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-vec = "0.1.3"
base64 = "0.21.2"
feanor-math = { version = "1.7.4", features = ["generic_tests"] }
he-ring = "0.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.10.0"
selfref = "0.4.3"
statrs = "0.17.1"

[features]
disable_parallel = []
evaluation_runtime_checks = []

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security"
]

[profile.profiling]
inherits = "bench"
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
